--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/pokedex
+#MONGO_URI=mongodb://ash:paleta@localhost:27017/pokedex?authSource=admin
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 NODE_ENV=development
